# toy-mlir

./: CMakeLists.txt  LICENSE  README.md
examples/: .lit_test_times.txt  affine-lowering.mlir  ast.toy  basic.toy  codegen.mlir  codegen.toy  empty.toy  invalid.mlir  jit.toy  lit.cfg.py  llvm-lowering.mlir  run_tests.py  scalar.toy  shape_inference.mlir  struct-ast.toy  struct-codegen.toy  struct-opt.mlir  transpose_transpose.toy  trivial_reshape.toy  user_defined_function.toy
scripts/: build-llvm-mlir.sh  import.sh  run_tests.py  standalone-build.sh  test.sh  walkthrough.sh
toy/: CMakeLists.txt  Ops.td
